handler exception and i18n

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ spring:
     ansi:
       enabled: detect
 
+  messages:
+    basename: i18n/messages
+
   #datasource
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
