--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
             <version>${zookeeper.version}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-server</artifactId>
+            <version>2.1.5</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
