--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,13 @@ spring:
   messages:
     basename: i18n/messages
 
+  boot:
+    admin:
+      context-path: /registration-service
+      notify:
+        pagerduty:
+          client-url: http://localhost:${server.port}/${spring.boot.admin.context-path}
+
   #datasource
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -45,9 +52,13 @@ spring:
       enabled: true
       path: /h2-console
 
+  zipkin:
+    base-url: http://localhost:9411/
+
 #port
 server:
   port: 8081
+
 
 
 dubbo:
